<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Load App </string>
    <string name="notification_description">The repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are Loading</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="ok">OK</string>
    <string name="status">Status:</string>
    <string name="file_name">File Name:</string>
    <string name="download_image">Download Image</string>

    <string name="success_status">Success</string>
    <string name="failure_status">Fail</string>
</resources>
